<resources>
    <string name="app_name">今日农情</string>


    <string name="weather_live">实时</string>
    <string name="weather_forecast">预报</string>

    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="report_time">发布时间</string>


    <!--font awesome icon-->
    <string name="icon_mainpage">&#xf015;</string>
    <string name="icon_farmland">&#xf009;</string>
    <string name="icon_suggestion">&#xf06c;</string>
    <string name="icon_farmwork">&#xf21a;</string>
    <string name="icon_setting">&#xf013;</string>
    <string name="icon_menu">&#xf0c9;</string>
    <string name="icon_add">&#xf067;</string>
    <string name="icon_txt_exit">&#xf00d; 退出</string>
    <string name="icon_change_shape_circle">&#xf111;</string>
    <string name="icon_change_shape_polygon">&#xf0c8;</string>
    <string name="icon_txt_drawback">&#xf112; 撤销</string>
    <string name="icon_exit">&#xf00d;</string>
    <string name="icon_yes">&#xf00c;</string>
    <string name="icon_back">&#xf060;</string>
    <string name="icon_edit">&#xf040;</string>
    <string name="icon_user">&#xf007;</string>
    <string name="icon_phone">&#xf098;</string>
    <string name="icon_building">&#xf1ad;</string>
    <string name="icon_location">&#xf041;</string>

    <!-- mapbox  -->
    <string name="mapbox_access_token">pk.eyJ1IjoieGlsaWFuZ3hpYW9rZSIsImEiOiJjam5penI3OTUwdTRyM3dxdHY2eXR0eGEyIn0.1c_ZjGpk6s6oasRSahw1UA</string>


    <string name="menu_mainpage">&#xf015;-  首页</string>
    <string name="menu_farm">&#xf009;-  农田</string>
    <string name="menu_suggest">&#xf06c;-  建议</string>
    <string name="menu_farmthing">&#xf21a;-  农事</string>
    <string name="menu_zhuji">&#xf279;-  注记</string>
    <string name="menu_weather">&#xf185;-  天气</string>
    <string name="menu_setting">&#xf013;-  设置</string>
    <string name="title_activity_drawer_tab">DrawerTabActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="icon_date" >&#xf073;</string>
    <string name="icon_crop" >&#xf06c;</string>
    <string name="icon_block" >&#xf00a;</string>


</resources>
