<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- 地图-->
    <WebView
        android:id="@+id/addfarmmap"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </WebView>

    <!--退出-->
    <Button
        android:id="@+id/exit"
        android:text="@string/icon_txt_exit"
        android:background="@drawable/button_login_bg"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:gravity="center"
        android:layout_width="80dp"
        android:layout_height="40dp" />

    <!--撤销-->
    <Button
        android:id="@+id/back"
        android:text="@string/icon_txt_drawback"
        android:background="#ce0202"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="100dp"
        android:visibility="gone"
        android:textColor="#ffffff"
        android:gravity="center"
        android:layout_width="80dp"
        android:layout_height="40dp" />

    <TextView
        android:id="@+id/changeshape"
        android:text="@string/icon_change_shape_circle"
        android:gravity="center"
        android:textColor="#8BC34A"
        android:textSize="70dp"
        android:layout_marginTop="80dp"
        android:layout_alignParentRight="true"
        android:paddingRight="10dp"
        android:layout_width="80dp"
        android:layout_height="80dp" />


    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_height="60dp">
        <TextView
            android:id="@+id/actiontip"
            android:paddingLeft="10dp"
            android:text="绘制农田边界"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/dodraw"
            android:text="绘制农田"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_bg_blue"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_width="100dp"
            android:layout_height="40dp" />

    </RelativeLayout>


</RelativeLayout>