<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- title -->
    <RelativeLayout
        android:background="#46A05A"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleheight">

        <TextView
            android:text="编辑农田"
            android:textSize="@dimen/title_text_size"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/close"
            android:textColor="#ffffff"
            android:text="@string/icon_exit"
            android:gravity="center"
            android:textSize="18dp"
            android:layout_width="@dimen/titleheight"
            android:layout_height="@dimen/titleheight" />

        <TextView
            android:id="@+id/save"
            android:textColor="#ffffff"
            android:text="@string/icon_yes"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:textSize="18dp"
            android:layout_width="@dimen/titleheight"
            android:layout_height="@dimen/titleheight" />

    </RelativeLayout>


    <!-- MAP-->
    <RelativeLayout
        android:layout_marginTop="@dimen/titleheight"
        android:layout_width="match_parent"
        android:layout_height="180dp">
        <WebView
            android:id="@+id/map"
            android:layout_marginTop="@dimen/titleheight"
            android:layout_width="match_parent"
            android:layout_height="180dp"/>


        <!--map edit button-->
        <TextView
            android:id="@+id/mapedit"
            android:gravity="center"
            android:text="@string/icon_edit"
            android:textColor="#ffffff"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:layout_width="@dimen/titleheight"
            android:layout_height="@dimen/titleheight" />

    </RelativeLayout>


    <!--输入农田名称-->
    <EditText
        android:id="@+id/editfarmname"
        android:hint="请输入农田名称"
        android:layout_below="@id/map"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp" />


    <!--输入农田面积-->
    <EditText
        android:id="@+id/editfarmarea"
        android:hint="请输入农田面积"
        android:layout_below="@id/editfarmname"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp" />



    <!--DELETE-->
    <TextView
        android:id="@+id/delete"
        android:text="删除"
        android:layout_alignParentBottom="true"
        android:textColor="#f77878"
        android:gravity="center"
        android:textSize="@dimen/delete_btn_txt_size"
        android:layout_width="match_parent"
        android:layout_height="100dp" />


</RelativeLayout>