<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="#259b24"
        android:layout_height="@dimen/titleheight">

        <TextView
            android:id="@+id/title"
            android:text="注记"
            android:textColor="#ffffff"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!--close-->
        <TextView
            android:id="@+id/close"
            android:gravity="center"
            android:text="@string/icon_back"
            android:textColor="#ffffff"
            android:layout_width="@dimen/titleheight"
            android:layout_height="@dimen/titleheight" />

        <!--save-->
        <TextView
            android:id="@+id/save"
            android:gravity="center"
            android:text="@string/icon_yes"
            android:textColor="#ffffff"
            android:layout_alignParentRight="true"
            android:layout_width="@dimen/titleheight"
            android:layout_height="@dimen/titleheight" />

    </RelativeLayout>


    <!--web view-->
    <WebView
        android:id="@+id/webview"
        android:layout_marginTop="@dimen/titleheight"
        android:layout_width="match_parent"
        android:layout_height="180dp"/>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--note name-->
        <EditText
            android:id="@+id/notename"
            android:hint="请输入注记信息"

            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <View
            android:background="@color/devideline"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <!--pics-->
        <TextView

            android:text="现场图片"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <com.today.todayfarm.customView.PicHorizentalList
            android:id="@+id/picsview"
            android:layout_width="match_parent"
            android:layout_height="100dp"/>

        <View
            android:background="@color/devideline"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <!--fieldname-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:text="@string/icon_add"
                android:paddingRight="10dp"
                android:gravity="center_vertical"
                android:layout_width="80dp"
                android:layout_height="50dp" />
            <TextView
                android:id="@+id/fieldname"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:layout_marginLeft="80dp"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </RelativeLayout>
        <!--crop-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:text="@string/icon_add"
                android:paddingRight="10dp"
                android:gravity="center_vertical"
                android:layout_width="80dp"
                android:layout_height="50dp" />
            <TextView
                android:id="@+id/cropname"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:layout_marginLeft="80dp"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </RelativeLayout>
        <!--time-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:text="@string/icon_add"
                android:paddingRight="10dp"
                android:gravity="center_vertical"
                android:layout_width="80dp"
                android:layout_height="50dp" />
            <TextView
                android:id="@+id/notetime"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:layout_marginLeft="80dp"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </RelativeLayout>
        <View
            android:background="@color/devideline"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <TextView
            android:id="@+id/delete"
            android:gravity="center"
            android:text="DELETE"
            android:textColor="#be0202"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>




</RelativeLayout>